Fixed spacing issues and finished SEO optimization

--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,6 @@ h3 {
 p {
   font-size: 18px;
   line-height: 1.5;
-  padding-bottom: 20px;
 }
 
 .primary-link {
@@ -108,6 +107,11 @@ p {
 
   h2 {
     font-size: 32px;
+  }
+
+  p {
+    display: block;
+    text-align: center;
   }
 
   .primary-link {
